test: align reconciliation service behavior and tests